--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/CSS-Mint/2.0.7/css-mint.min.css" />
+  <link rel="stylesheet" type="text/css" href="main.css" />
+
   <div class="cm-card">
-    <div class="cm-card-header" style="text-size: 30px;">
+    <div class="cm-card-header" style="font-size: 30px;">
       DHHS News
+      <button class="cm-btn success" style="float:right;padding:10px;">News</button>
+      <button class="cm-btn success" style="float:right;padding:10px;">Home</button>
+      
     </div>
   </div>
 </html>
