💈🍱 Checkpoint ./index.html:8105878/301

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <div class="cm-card">
     <div class="cm-card-header" style="font-size: 30px;">
       DHHS News
+      <button class="cm-btn error line" style="float:right;padding:10px;">Login</button>
+      <button class="cm-btn success" style="float:right;padding:10px;">About Us</button>
+      <button class="cm-btn success" style="float:right;padding:10px;">Snow</button>
       <button class="cm-btn success" style="float:right;padding:10px;">News</button>
       <button class="cm-btn success" style="float:right;padding:10px;">Home</button>
       
