--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <!--
+              (^\-==-/^)
+              >\\ == //<
+             :== q''p ==:      _,.---.._
+              .__ qp __. ~.-'"'\   |   |''..
+                 ^--^  | | \  \ |   , || /  '-. _______ .":
+                  ;| | |    | |     |/   .^-./ _)_)__))_).'
+                 / \ /      |       \ /  {/ \
+             ..-'\_ \   \       ,.--'\ _ ) _/\
+            |  ,_../ \- |'---"""      '-/ \  |
+             --       | |            /_.   |-|
+                  __' | |   ._ ___   \  )  | |__
+          _,______'__ddd'_______._____""__ddd'___SK______
+                  __________,______.   _._
+-->
   <link
     rel="stylesheet"
     type="text/css"
@@ -39,4 +54,34 @@
       >
     </div>
   </div>
+  <center>
+    <h1 style="font-size: 55px;padding:5px;">
+      DHHS News
+    </h1>
+    <h2>
+      The Unofficial Source for Daniel Hand News
+    </h2>
+    <br>
+    <h2>
+      Latest News
+    </h2>
+    <br>
+    <div class="cm-alert warning" style="font-size:18px;">Notice: This website is currently in beta.</div>
+    <div class="cm-card">
+      <div class="cm-card-header">
+        Will School be closed for COVID-19?
+      </div>
+      <div class="cm-card-body">
+        State sports tournaments, events, and the NBA have been cancelled. Will school be next?
+      </div>
+    </div>
+    <div class="cm-card">
+      <div class="cm-card-header">
+        Internet Privacy at School
+      </div>
+      <div class="cm-card-body">
+        Have you ever been surfing the web at school and gotten this screen ? You have encountered the web filter, also known as Securly, the software Madison Public Schools uses to keep students safe from inappropriate content on the internet. However this may come at a cost to students. Upon reading the Securly, Inc. privacy policy, we can find out how exactly data from what is called the “services” (software and other Securly products) is being shared. According to how we share your information section, they will share information with third parties to “perform functions on our behalf including helping us provide you with the Services”.
+      </div>
+    </div>
+  </center>
 </html>
