💝🚍 Checkpoint ./index.html:8105878/1849 ./glitch.json:8105878/78 ./accounts/login.php:8105878/38 ./news/index.html:8105878/6353

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/CSS-Mint/2.0.7/css-mint.min.css"
   />
   <link rel="stylesheet" type="text/css" href="main.css" />
+  <script src="https://cdn.riverside.rocks/assets/js/https.js"></script>
   <div class="cm-card">
     <div class="cm-card-header" style="font-size: 30px;">
       DHHS News
@@ -76,6 +77,14 @@
       </div>
     </div>
     <div class="cm-card">
+      <div class="cm-card-header">
+        CIAC Cancells All Winter Sports Tournaments
+      </div>
+      <div class="cm-card-body">
+        Recently, the CIAC announced that it would be cancelling all winter sports tournaments due to the fears of COVID-19.
+      </div>
+    </div>
+        <div class="cm-card">
       <div class="cm-card-header">
         Internet Privacy at School
       </div>
