--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,31 @@
     </h1>
     <br>
     <h2>
-      DHHS News is a independently run news company that focuses on Madison Connecticuit.
+      DHHS News is a independently run news company that focuses on Madison, CT. While our staff write many of the stories, users can create
+      their own articles.
     </h2>
+    <br>
+    <h1>
+      Staff
+    </h1>
+    <br>
+    <div class="cm-card">
+      <div class="cm-card-header">
+        Trent Wiles
+      </div>
+      <div class="cm-card-body">
+        Front + Backend development of the website. I also write articles and do just about everything that needs to be done.
+        <br>
+        <a href="https://github.com"
+      </div>
+      </div>
+        <div class="cm-card">
+      <div class="cm-card-header">
+        Will Casidy
+      </div>
+      <div class="cm-card-body">
+        Head Author and Front end developement.
+      </div>
+      </div>
   </center>
 </html>
