🕵🐘 Checkpoint ./about/index.html:8105878/5913 ./account/login.php:8105878/5392 ./login.html:8105878/7458

--- a/login.html
+++ b/login.html
@@ -57,41 +57,10 @@
   </div>
   <center>
     <h1>
-      About Us
+      Login (Beta)
     </h1>
-    <br />
-    <h2>
-      DHHS News is a independently run news company that focuses on Madison, CT.
-      While our staff write many of the stories, users can create their own
-      articles.
-    </h2>
-    <br />
-    <h1>
-      Staff
-    </h1>
-    <br />
-    <div class="cm-card">
-      <div class="cm-card-header">
-        Trent Wiles
-      </div>
-      <div class="cm-card-body">
-        Front + Backend development of the website. I also write articles and do
-        just about everything that needs to be done.
-        <br />
-        <a href="https://github.com/RiversideRocks">GitHub</a>
-        <br />
-        <a href="https://www.riverside.rocks">Website</a>
-        <br />
-        <a href="https://youtube.com/riversiderocks">YouTube</a>
-      </div>
-    </div>
-    <div class="cm-card">
-      <div class="cm-card-header">
-        Will Casidy
-      </div>
-      <div class="cm-card-body">
-        Head Author and Front end developement.
-      </div>
-    </div>
+    <imput action="/accounts/login.php">
+    
+    </imput>
   </center>
 </html>
