💴🙋 Checkpoint ./login.html:8105878/4772

--- a/login.html
+++ b/login.html
@@ -60,7 +60,11 @@
       Login (Beta)
     </h1>
     <imput action="/accounts/login.php">
-    
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="password" /><br /><br />
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" /><br /><br />
+      <input type="submit" value="Submit" />
     </imput>
   </center>
 </html>
