🙇🍱 Checkpoint ./login.html:8105878/438 ./account/login.php:8105878/3399 ./about/index.html:8105878/238 ./main.css:8105878/74

--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,13 @@
         Will Casidy
       </div>
       <div class="cm-card-body">
-        Head Author and Front end developement.
+        Head Author and Frontend developement.
+      </div>
+    </div>
+    <br>
+        <div class="cm-card">
+      <div class="cm-card-header">
+        <a href="https://www.riverside.rocks" target="blank">A Riverside Rocks Project</a>
       </div>
     </div>
   </center>
