--- a/login.html
+++ b/login.html
@@ -59,11 +59,17 @@
     <h1>
       Login (Beta)
     </h1>
+    <br>
+    <div class="cm-alert warning">At this time, the login area is still being developed. We are currently sycing the data from
+    our old website. Untill then, please use the <a href="https://dhhs.riverside.rocks">old website</a> to submit posts and
+      edit account details.
+    </div>
+    <br>
     <imput action="/accounts/login.php">
       <label for="username">Username:</label>
-      <input type="text" id="username" name="password" /><br /><br />
+      <input type="text" id="username" name="password" disabled /><br /><br />
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" /><br /><br />
+      <input type="password" id="password" name="password" disabled /><br /><br />
       <input type="submit" value="Submit" />
     </imput>
   </center>
