--- a/close/index.html
+++ b/close/index.html
@@ -61,6 +61,9 @@
     </h1>
     <br>
     <div class="cm-alert success">School is on!</div>
-
+    <br>
+    <h2>
+      Keep checking back for more updates!
+    </h2>
   </center>
 </html>
