🗽🐩 Checkpoint ./.gitignore:8105878/5 ./news/internet-privacy-at-school/index.html:8105878/6360 ./index.html:8105878/201

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     </h2>
     <br>
     <div class="cm-alert warning" style="font-size:18px;">Notice: This website is currently in beta.</div>
+    <a href="/news/will-school-be-closed-for-covid-19/"
     <div class="cm-card">
       <div class="cm-card-header">
         Will School be closed for COVID-19?
@@ -77,6 +78,8 @@
         State sports tournaments, events, and the NBA have been cancelled. Will school be next?
       </div>
     </div>
+</
+  </a>
     <div class="cm-card">
       <div class="cm-card-header">
         CIAC Cancells All Winter Sports Tournaments
@@ -85,6 +88,7 @@
         Recently, the CIAC announced that it would be cancelling all winter sports tournaments due to the fears of COVID-19.
       </div>
     </div>
+    <a href="/news/internet-privacy-at-school/">
         <div class="cm-card">
       <div class="cm-card-header">
         Internet Privacy at School
@@ -93,5 +97,6 @@
         Have you ever been surfing the web at school and gotten this screen ? You have encountered the web filter, also known as Securly, the software Madison Public Schools uses to keep students safe from inappropriate content on the internet. However this may come at a cost to students. Upon reading the Securly, Inc. privacy policy, we can find out how exactly data from what is called the “services” (software and other Securly products) is being shared. According to how we share your information section, they will share information with third parties to “perform functions on our behalf including helping us provide you with the Services”.
       </div>
     </div>
+      </a>
   </center>
 </html>
