📌🐦 Checkpoint ./news/will-school-be-closed-for-covid-19/index.html:8105878/14971 ./index.html:8105878/734 ./news/index.html:8105878/935

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         Internet Privacy at School
       </div>
       <div class="cm-card-body">
-        Have you ever been surfing the web at school and gotten this screen ? You have encountered the web filter, also known as Securly, the software Madison Public Schools uses to keep students safe from inappropriate content on the internet. However this may come at a cost to students. Upon reading the Securly, Inc. privacy policy, we can find out how exactly data from what is called the “services” (software and other Securly products) is being shared. According to how we share your information section, they will share information with third parties to “perform functions on our behalf including helping us provide you with the Services”.
+        Your internet data may be in the hands of the wrong people.
       </div>
     </div>
       </a>
